--- a/app/src/main/res/layout/upcoming_launches_recycler_item.xml
+++ b/app/src/main/res/layout/upcoming_launches_recycler_item.xml
@@ -11,30 +11,52 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginStart="16dp"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-            tools:text="75"/>
-
-    <TextView
-            android:id="@+id/text_launch_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@id/text_flight_number"
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="8dp"
-            tools:text="2007-03-21T01:10:00.000Z"/>
+            tools:text="Flight number: 85"/>
 
     <TextView
             android:id="@+id/text_mission_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxWidth="240dp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:layout_below="@id/text_flight_number"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            tools:text="CRS-18"/>
+
+    <TextView
+            android:id="@+id/text_launch_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_mission_name"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            tools:text="2007-03-21T01:10:00.000Z"/>
+
+    <TextView
+            android:id="@+id/textview"
+            android:text="@string/launch_site"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"/>
+
+    <TextView
+            android:id="@+id/text_launch_site"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxWidth="100dp"
+            android:layout_below="@id/textview"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            tools:text="Nusantara Satu (PSN-6) / GTO-1 / Beresheet"/>
+            tools:text="CCAFS SLC 40"/>
 
 </RelativeLayout>
