--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,7 @@
         <item name="materialButtonStyle">@style/AppButton</item>
         <item name="alertDialogTheme">@style/MaterialAlertDialog</item>
         <item name="chipIconTint">@color/colorSecondaryLight</item>
+        <item name="bottomSheetDialogTheme">@style/BottomSheetDialogTheme</item>
 
     </style>
 
@@ -67,4 +68,11 @@
         <item name="android:textColor">@color/text_color_chip_state_list</item>
     </style>
 
+    <style name="BottomSheetStyle" parent="@style/Widget.Design.BottomSheet.Modal">
+        <!-- Drawable for setting rounded corners for bottom sheet -->
+        <item name="android:background">@drawable/bg_bottom_sheet</item>
+    </style>
+    <style name="BottomSheetDialogTheme" parent="@style/Theme.MaterialComponents.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/BottomSheetStyle</item>
+    </style>
 </resources>
