--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,6 +56,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
+            android:background="@color/colorPrimary"
             app:headerLayout="@layout/nav_view_header"
             app:menu="@menu/menu_nav_view"
             app:itemBackground="@drawable/nav_view_item_background"
